# jail-population-reports

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  extractor-ci.yaml
docs/: catalog.json  graph.gpickle  manifest.json  run_results.json  tji.css
extractor/: .coveragerc  .pre-commit-config.yaml  Dockerfile  cli.py  convert.py  database.py  pyproject.toml  tcjs.py
extractor/connection/: tcjs.py
extractor/tests/assets/jail_population/: jail_population.csv  metrics.csv
extractor/tests/unit/: test_convert.py
public/: catalog.json  graph.gpickle  index.html  manifest.json  tji.css
warehouse/: .pre-commit-config.yaml  dbt_project.yml  pyproject.toml
warehouse/data/lookups/: county.csv  county_names.csv  jail.csv
warehouse/models/: docs.md  tcjs_reports.yml
warehouse/models/prep/: immigrant_county.sql  immigrant_data_date.sql  immigrant_total.sql  jail_population_county.sql  jail_population_total.sql  pregnancy_base.sql  pregnancy_county.sql  pregnancy_total.sql  schema.yml  serious_incidents_county.sql  serious_incidents_data_date.sql  serious_incidents_total.sql
warehouse/models/prep/immigrant/: immigrant_base.sql  immigrant_county.sql  immigrant_data_date.sql  immigrant_total.sql  schema.yml
warehouse/models/prep/jail_population/: jail_population_county.sql  jail_population_data_date.sql  jail_population_total.sql  schema.yml
warehouse/models/prep/pregnancy/: pregnancy_base.sql  pregnancy_county.sql  pregnancy_data_date.sql  pregnancy_total.sql  schema.yml
warehouse/models/prep/serious_incidents/: serious_incidents_data_date.sql
warehouse/seeds/lookups/: county.csv  jail.csv  schema.yml
(+2 files in other folders)
