[tool.poetry]
name = "extractor"
version = "0.0.1"
description = "Download and parse PDFs from TCJS website and load to data warehouse"
authors = ["elaine ayo <projects@elaineayo.com>"]

[tool.poetry.scripts]
loader = 'extractor.cli:extract'

[tool.poetry.dependencies]
python = "^3.7.2"
click = "^7.0"
pandas = "^1.0.1"
python-dotenv = "^0.11.0"
sqlalchemy = "^1.3.18"
psycopg2-binary = "^2.8.6"
mashumaro = "^1.22"
requests = "^2.25.1"
pdf2image = "*"
pytesseract = "*"

[tool.poetry.dev-dependencies]
coverage = "^5.3"
pytest = "^5.4.2"
black = "^19.10b0"
pre-commit = "^2.4.0"
mypy = "^0.770"
pylint = "2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"