[tool.poetry]
name = "warehouse"
version = "0.1.0"
description = ""
authors = ["elaine ayo <projects@elaineayo.com>"]

[tool.sqlfluff.core]
templater = "dbt"
sql_file_exts = ".sql"
dialect = "postgres"
exclude_rules = "L031, L027, L028, L029, L034"

[tool.sqlfluff.indentation]
indented_joins = false
indented_using_on = true
template_blocks_indent = false

[tool.sqlfluff.templater]
unwrap_wrapped_queries = true

[tool.sqlfluff.rules]
comma_style = "leading"
max_line_length = 100

[tool.sqlfluff.rules.L003]
indent_unit = "space"
lint_templated_tokens = false
tab_space_size = 4

[tool.sqlfluff.rules.L010]
capitalisation_policy = "upper"

[tool.sqlfluff.templater.jinja]
apply_dbt_builtins = true

[tool.poetry.dependencies]
python = "^3.9.0"
dbt = "0.20.2"
zipp = "^3.5.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.4.0"
sqlfluff = "0.6.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
